--- a/AssignmentMvcEntity/Views/Supplier/Delete.cshtml
+++ b/AssignmentMvcEntity/Views/Supplier/Delete.cshtml
@@ -43,7 +43,7 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Deleted">
         <input type="hidden" asp-for="SupplierId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
