--- a/AssignmentMvcEntity/Views/Inventory/Index.cshtml
+++ b/AssignmentMvcEntity/Views/Inventory/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.LastUpdated)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Supplier)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -42,6 +45,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SupplierId)
+                </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.InventoryId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.InventoryId">Details</a> |
