--- a/AssignmentMvcEntity/Views/Inventory/Create.cshtml
+++ b/AssignmentMvcEntity/Views/Inventory/Create.cshtml
@@ -32,6 +32,10 @@
                 <input asp-for="LastUpdated" class="form-control" />
                 <span asp-validation-for="LastUpdated" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="SupplierId" class="control-label"></label>
+                <select asp-for="SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
+            </div>
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
