--- a/AssignmentMvcEntity/Views/Inventory/Details.cshtml
+++ b/AssignmentMvcEntity/Views/Inventory/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model AssignmentMvcEntity.Models.Inventory
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Inventory</h4>
     <hr />
@@ -35,11 +34,15 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastUpdated)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Supplier)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Supplier.SupplierId)
+        </dd>
     </dl>
-    
-    <form asp-action="Deleted">
-        <input type="hidden" asp-for="InventoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.InventoryId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
