--- a/AssignmentMvcEntity/Views/Inventory/Edit.cshtml
+++ b/AssignmentMvcEntity/Views/Inventory/Edit.cshtml
@@ -34,6 +34,10 @@
                 <span asp-validation-for="LastUpdated" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SupplierId" class="control-label"></label>
+                <select asp-for="SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
