--- a/AssignmentMvcEntity/Views/Inventory/Index.cshtml
+++ b/AssignmentMvcEntity/Views/Inventory/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AssignmentMvcEntity.Models.Inventory>
+﻿@model IEnumerable<AssignmentMvcEntity.Models.InventoryViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -25,7 +25,13 @@
                 @Html.DisplayNameFor(model => model.LastUpdated)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Supplier)
+                @Html.DisplayNameFor(model => model.SupplierId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SupplierName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ContactNo)
             </th>
             <th></th>
         </tr>
@@ -45,13 +51,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.SupplierId)
-                </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.InventoryId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.InventoryId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.InventoryId">Delete</a>
+                @Html.DisplayFor(modelItem => item.SupplierId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SupplierName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContactNo)
+            </td>
+            <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
